--- a/portfolio-aggregator.html
+++ b/portfolio-aggregator.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Aggregator - Prime</title>
-  <meta name="description" content="Aggregator - portfolio details.">
-  <meta name="keywords" content="">
+  <title>Aggregator Website Design & Development | Prime</title>
+  <meta name="description" content="Discover Prime's design and development of aggregator websites that collect products from various categories like food, computer games, and digital services. Our user-friendly platforms enhance browsing and increase engagement. Build your website for your business today!">
+  <meta name="keywords" content="aggregator website design, website development, product aggregation, food products, computer games, digital services, user experience, intuitive search, filter options, responsive design, online platform, customer engagement, brand identity, business goals, product categories">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -124,9 +124,26 @@
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Aggregator</h2>
+              <h2>Aggregator Website Design and Development</h2>
               <p>
-                Design and development of an aggregator website. It collects products from multiple categories like food products, computer games, digital services and other.
+                At Prime, we specialize in the design and development of aggregator websites that efficiently collect and display
+                products from various categories, such as food products, computer games, digital services, and more. Our team
+                understands the importance of providing users with a seamless experience when browsing through diverse offerings. By
+                integrating advanced features, we ensure that your aggregator website not only showcases products but also enhances user
+                engagement and satisfaction.
+              </p>
+              <p>
+                Our aggregator websites are designed with a focus on user experience, allowing visitors to easily navigate through
+                different product categories. With intuitive search functionality and filter options, users can quickly find what
+                they’re looking for, whether it's a new video game or the latest food delivery service. Additionally, we implement
+                responsive design principles to ensure your site performs flawlessly on all devices, making it accessible to a broader
+                audience.
+              </p>
+              <p>
+                Choosing Prime as your website design company means opting for a solution that combines aesthetic appeal with robust
+                functionality. We collaborate with you to tailor the aggregator website to your specific needs, ensuring it aligns with
+                your brand identity and business goals. Let us help you create a powerful online platform that not only aggregates
+                products but also drives conversions and fosters customer loyalty.
               </p>
             </div>
           </div>
