--- a/portfolio-audio-player.html
+++ b/portfolio-audio-player.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Audio player - Prime</title>
-  <meta name="description" content="Audio player - portfolio details.">
-  <meta name="keywords" content="">
+  <title>Internet Audio Player Design & Development | Prime</title>
+  <meta name="description" content="Experience seamless listening with Prime's design and development of internet audio players. Our user-friendly interface and advanced features ensure an immersive audio experience for streaming music, podcasts, and audiobooks. Elevate your platform with our expert web development services today!">
+  <meta name="keywords" content="internet audio player, audio player design, audio player development, immersive listening experience, user-friendly interface, streaming music, podcasts, audiobooks, playlists, equalizer settings, high-quality audio, audio sources integration, desktop audio player, mobile audio player, customizable audio application, listening experience">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -124,9 +124,24 @@
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Audio player</h2>
+              <h2>Internet Audio Player Design and Development</h2>
               <p>
-                Design and development of an internet audio player.
+                At Prime, we specialize in the design and development of internet audio players that provide users with an immersive
+                listening experience. Our team focuses on creating an intuitive interface that allows users to easily navigate through
+                their audio libraries, whether they're streaming music, podcasts, or audiobooks. With a user-friendly design, our audio
+                player ensures that listeners can enjoy their favorite content without any hassle.
+              </p>
+              <p>
+                Our internet audio player is equipped with advanced features such as playlists, equalizer settings, and the ability to
+                stream high-quality audio. We prioritize seamless integration with various audio sources, ensuring that users have
+                access to their favorite content from multiple platforms. Additionally, our applications are designed to be compatible
+                with both desktop and mobile devices, providing a consistent experience for users on the go.
+              </p>
+              <p>
+                By choosing Prime for your audio player development, you gain access to a solution that combines functionality and
+                aesthetics. Our dedicated team works closely with you to customize the application to your specific needs, ensuring that
+                it aligns with your brand and user expectations. Together, we can create a powerful internet audio player that enhances
+                your users' listening experience and keeps them engaged.
               </p>
             </div>
           </div>
