--- a/portfolio-coffee-house.html
+++ b/portfolio-coffee-house.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Coffee house - Prime</title>
-  <meta name="description" content="Coffee house - portfolio details.">
-  <meta name="keywords" content="">
+  <title>Coffee House Website Design and Development | Prime</title>
+  <meta name="description" content="Discover Prime's expertise in design and development of coffee house websites. We create visually appealing sites that enhance your online presence, integrate discount systems, and manage order distribution across multiple locations. Partner with us to elevate your coffee business today!">
+  <meta name="keywords" content="coffee house website design, innovative websites, online presence, aesthetic appeal, customer engagement, menu exploration, online ordering, special offers, discount system integration, customer loyalty, order distribution, efficient management, coffee market solutions, web services">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -124,9 +124,23 @@
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Coffee house</h2>
+              <h2>Coffee House Website Development</h2>
               <p>
-                Design and development of a Coffee house website. Integration of a discount system. Distribution of orders between different cofee houses of the company.
+                We are dedicated to creating innovative websites specifically for coffee houses, aimed at transforming your online
+                presence. Our approach combines aesthetic appeal with functionality, ensuring that your website not only showcases your
+                unique brand but also provides an engaging experience for your customers, making it easy for them to explore your menu,
+                place orders, and discover special offers.
+              </p>
+              <p>
+                We understand the importance of providing a seamless experience for your customers, which is why we offer the
+                integration of a discount system to incentivize purchases and boost customer loyalty. Additionally, our solutions
+                include the distribution of orders between different coffee houses within your company, ensuring efficient management
+                and timely service.
+              </p>
+              <p>
+                By partnering with Prime, you can expect a comprehensive website that not only represents your coffee house brand but
+                also streamlines operations and enhances customer satisfaction. Let us help you create a website for your business that
+                stands out in the competitive coffee market.
               </p>
             </div>
           </div>
