--- a/portfolio-cryptocurrency.html
+++ b/portfolio-cryptocurrency.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Cryptocurrency - Prime</title>
-  <meta name="description" content="Cryptocurrency - portfolio details.">
-  <meta name="keywords" content="">
+  <title>Cryptocurrency Application Design for Mobile Devices | Prime</title>
+  <meta name="description" content="Explore Prime's expertise in the design of cryptocurrency applications for mobile devices. Our innovative solutions offer real-time market tracking, secure wallet functionality, and user-friendly interfaces, ensuring a seamless experience for all traders. Partner with us to elevate your cryptocurrency business today!">
+  <meta name="keywords" content="cryptocurrency application development, mobile cryptocurrency apps, digital currency solutions, secure wallet functionality, cryptocurrency market tracking, user-friendly cryptocurrency interfaces, cryptocurrency security features, mobile app design, innovative cryptocurrency applications, financial technology development, cryptocurrency user experience">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -124,9 +124,24 @@
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Cryptocurrency</h2>
+              <h2>Cryptocurrency Application Development</h2>
               <p>
-                Design of a cryptocurrency application for mobile devices.
+                At Prime, we are at the forefront of the digital revolution, specializing in the design of cryptocurrency applications
+                for mobile devices that empower users to engage with the evolving financial landscape. Our innovative solutions combine
+                cutting-edge technology with intuitive design, ensuring a seamless user experience that makes navigating the world of
+                cryptocurrency both accessible and engaging.
+              </p>
+              <p>
+                Our team focuses on creating mobile applications that offer real-time tracking of cryptocurrency markets, secure wallet
+                functionality, and user-friendly interfaces that cater to both novice and experienced traders. We understand the
+                importance of security in the cryptocurrency realm, which is why our applications are built with advanced security
+                features to protect user data and transactions.
+              </p>
+              <p>
+                By partnering with Prime, you can expect a comprehensive cryptocurrency application that not only meets industry
+                standards but also enhances your brand's reputation in the competitive market. Let us help you create a mobile
+                application for your business that stands out, ensuring your users have the tools they need to thrive in the digital
+                currency world.
               </p>
             </div>
           </div>
