--- a/portfolio-energy-storage.html
+++ b/portfolio-energy-storage.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Energy storage - Prime</title>
-  <meta name="description" content="Energy storage - portfolio details.">
-  <meta name="keywords" content="">
+  <title>3D Design and Modeling of Energy Storage Solutions | Prime</title>
+  <meta name="description" content="Discover Prime's expertise in 3D design and modeling of energy storage solutions for electricity charging devices. Our innovative designs enhance presentations, showcasing unique features and benefits. Partner with us to elevate your energy storage product visibility today!">
+  <meta name="keywords" content="energy storage solutions, 3D design, modeling, electricity charging devices, energy management, innovative design, visual presentation, product features, realistic textures, energy consumption, Prime design services, energy storage systems">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -124,9 +124,21 @@
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Energy storage</h2>
+              <h2>Innovative Energy Storage Solutions</h2>
               <p>
-                3D design and modeling of an energy storage for a presentation of electricity charging devices.
+                Transforming the future of energy management, Prime specializes in the 3D design and modeling of energy storage
+                solutions tailored for electricity charging devices. Our approach emphasizes creativity and precision, ensuring that
+                each design effectively communicates the functionality and advantages of your products during presentations.
+              </p>
+              <p>
+                We focus on crafting visually compelling models that highlight the unique features of your energy storage systems,
+                making it easier for your audience to understand their benefits and applications. Our expertise extends to incorporating
+                realistic textures and materials, ensuring that every detail enhances your presentation and captures attention.
+              </p>
+              <p>
+                By choosing Prime, you are not just selecting a design service; you are investing in a partnership that prioritizes
+                innovation in the field of energy storage solutions. Let us help you present your electricity charging devices in the
+                best light, showcasing their potential to revolutionize energy consumption.
               </p>
             </div>
           </div>
