--- a/portfolio-fitness.html
+++ b/portfolio-fitness.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Fitness - Prime</title>
-  <meta name="description" content="Fitness - portfolio details.">
-  <meta name="keywords" content="">
+  <title>Fitness Mobile Application Design & Development | Prime</title>
+  <meta name="description" content="Achieve your health goals with Prime's design and development of fitness mobile applications. Our user-friendly app features exercise tracking, nutrition logging, and social sharing options to keep users motivated and engaged. Start your fitness journey with us today!">
+  <meta name="keywords" content="fitness mobile application, health and wellness, workout routines, progress tracking, personalized fitness plans, exercise tracking, nutrition logging, workout reminders, social sharing, fitness communities, user experience, app development, fitness app features, health improvement, motivation, accountability, mobile fitness platform, fitness journey, custom fitness application">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -124,9 +124,25 @@
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Fitness</h2>
+              <h2>Fitness Mobile Application Design and Development</h2>
               <p>
-                Design and development of a fitness mobile application.
+                At Prime, we specialize in the design and development of fitness mobile applications that help users achieve their
+                health and wellness goals. Our team understands the importance of creating an intuitive and user-friendly interface,
+                allowing users to easily navigate through workout routines, track progress, and access personalized fitness plans.
+                Whether users are beginners or seasoned athletes, our application caters to all fitness levels, making it an essential
+                tool for anyone looking to improve their health.
+              </p>
+              <p>
+                We focus on integrating essential features such as exercise tracking, nutrition logging, and workout reminders to keep
+                users motivated and engaged. Additionally, our fitness mobile application offers social sharing options, enabling users
+                to connect with friends and join fitness communities. This creates a supportive environment that encourages
+                accountability and motivation, fostering a sense of camaraderie among users on their fitness journeys.
+              </p>
+              <p>
+                By choosing Prime for your fitness app development, you invest in a solution that prioritizes user experience and
+                functionality. Our dedicated team works closely with you to customize the application to meet your specific needs and
+                objectives. Together, we can create a comprehensive fitness platform that empowers users to take control of their health
+                and stay motivated every step of the way.
               </p>
             </div>
           </div>
