--- a/portfolio-freelance.html
+++ b/portfolio-freelance.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Freelance - Prime</title>
-  <meta name="description" content="Freelance - portfolio details.">
-  <meta name="keywords" content="">
+  <title>Freelance Website Design & Development | Prime</title>
+  <meta name="description" content="Transform your freelance career with Prime's design and development of freelance websites. Our services include creating a user-friendly platform that showcases your skills, enhances your professional presence, and connects you with clients. Start your journey with the best website design for small business today!">
+  <meta name="keywords" content="freelance website design, freelance website development, independent professionals, online presence, portfolio showcases, client testimonials, web design, user-friendly website, responsive design, graphic designer website, writer website, developer website, professional online presence, website for freelancers">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -124,9 +124,26 @@
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Freelance</h2>
+              <h2>Freelance Website Design and Development</h2>
               <p>
-                Design and development of a freelance website.
+                We specialize in the design and development of freelance websites that cater to the unique needs of independent
+                professionals. Our team understands the importance of creating a visually appealing and functional online presence that
+                showcases your skills and services effectively. With our expertise, we can help you create a website for your business
+                that stands out in a competitive market, allowing you to attract clients and enhance your professional reputation.
+              </p>
+              <p>
+                Our freelance websites come equipped with essential features such as portfolio showcases, client testimonials, and
+                integrated contact forms. These elements are designed to facilitate easy communication between freelancers and potential
+                clients, ensuring a seamless experience for both parties. By leveraging our web design and development expertise, we
+                ensure your site is user-friendly and optimized for various devices, making it accessible to your audience anywhere,
+                anytime.
+              </p>
+              <p>
+                Choosing Prime means partnering with a dedicated website design company that prioritizes your success. We work closely
+                with you to understand your vision and goals, tailoring the website to reflect your personal brand. Whether you're a
+                graphic designer, writer, or developer, we can help you build a professional online presence that drives engagement and
+                conversions. Let us assist you in taking the first step towards a successful freelance career by delivering a top-tier
+                website tailored just for you.
               </p>
             </div>
           </div>
