--- a/portfolio-internet-banking.html
+++ b/portfolio-internet-banking.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Internet banking - Prime</title>
-  <meta name="description" content="Internet banking - portfolio details.">
-  <meta name="keywords" content="">
+  <title>Internet Banking Web Application Design & Development | Prime</title>
+  <meta name="description" content="Transform your banking services with Prime's design and development of internet banking web applications. Our user-friendly platforms offer seamless integration with bank services, robust security measures, and enhanced customer experiences. Partner with us to elevate your online banking today!">
+  <meta name="keywords" content="internet banking, web application development, digital finance, user experience, financial activities, banking operations, accessibility, security protocols, end-to-end encryption, multi-factor authentication, fund transfers, bill payments, transaction tracking, banking services, operational efficiency, regulatory compliance, customer satisfaction, financial market">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -124,9 +124,30 @@
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Internet banking</h2>
+              <h2>Innovative Internet Banking Web Application Development</h2>
               <p>
-                Design and development of an internet banking web application. Integration the application to bank services.
+                In the ever-evolving landscape of digital finance, Prime offers cutting-edge design and development of internet banking
+                web applications that cater to the modern user's needs. Our approach centers on creating an engaging and intuitive user
+                experience, enabling customers to effortlessly navigate their financial activities. From checking balances to managing
+                investments, our applications empower users to take control of their banking operations with just a few clicks. We
+                understand that ease of use is critical, which is why our designs prioritize accessibility, ensuring that users of all
+                ages and backgrounds can utilize the platform without challenges.
+              </p>
+              <p>
+                Security and compliance are at the forefront of our development strategy. We implement state-of-the-art security
+                protocols, such as end-to-end encryption and multi-factor authentication, to ensure that user data remains protected
+                against potential threats. Additionally, we focus on the integration of the application with comprehensive banking
+                services, allowing for features like instant fund transfers, bill payments, and detailed transaction tracking. This
+                seamless integration not only enhances user confidence but also supports operational efficiency, enabling your bank to
+                provide exceptional service while meeting regulatory requirements.
+              </p>
+              <p>
+                At Prime, we are dedicated to not just meeting but exceeding your expectations for an internet banking web application.
+                Our collaborative process involves working closely with your team to tailor the application to your unique business
+                objectives and customer needs. We understand that every banking institution has its distinct challenges and goals, and
+                we are committed to delivering a solution that aligns perfectly with your vision. Together, we can create an innovative
+                internet banking platform that not only enhances customer satisfaction but also drives your business forward in a
+                competitive financial market.
               </p>
             </div>
           </div>
