--- a/portfolio-job.html
+++ b/portfolio-job.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Job - Prime</title>
-  <meta name="description" content="Job - portfolio details.">
-  <meta name="keywords" content="">
+  <title>Job Search Website Design & Development | Prime</title>
+  <meta name="description" content="Transform your recruitment process with Prime's design and development of job search websites. Our platforms include subscription models and integrated payment systems, enhancing the experience for both employers and job seekers. Build your website for your business today!">
+  <meta name="keywords" content="job search website, job seeker platform, employer connection, website design and development, user-friendly job site, job alerts, advanced search filters, personalized user profiles, subscription model, premium user benefits, payment system integration, resume building tools, interview preparation, career opportunities, job search efficiency, recruitment solutions">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -124,9 +124,24 @@
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Job</h2>
+              <h2>Job Search Website Design and Development</h2>
               <p>
-                Design and development of a job search website. Development of a subscription model, integration of a payment system.
+                We excel in the design and development of job search websites that connect job seekers with their dream opportunities.
+                Our team understands the importance of creating a platform that is not only visually appealing but also functional and
+                user-friendly. By leveraging our expertise, we help you create a website for your business that facilitates seamless
+                interactions between employers and candidates, making the job search process efficient and effective.
+              </p>
+              <p>
+                Our job search websites come equipped with essential features such as advanced search filters, job alerts, and
+                personalized profiles for users. We also develop a subscription model that provides exclusive benefits to premium users,
+                enhancing their job search experience. With the integration of a reliable payment system, users can easily manage their
+                subscriptions and access valuable resources, such as resume-building tools and interview preparation guides.
+              </p>
+              <p>
+                By choosing Prime as your website design company, you're partnering with a dedicated team committed to your success. We
+                collaborate closely with you to tailor the job search website to your specific needs, ensuring it aligns with your brand
+                identity and business objectives. Let us assist you in building a powerful platform that not only meets the needs of job
+                seekers but also attracts top employers, driving engagement and fostering long-term relationships.
               </p>
             </div>
           </div>
