--- a/portfolio-looping-ties.html
+++ b/portfolio-looping-ties.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Looping ties - Prime</title>
-  <meta name="description" content="Looping ties - portfolio details.">
-  <meta name="keywords" content="">
+  <title>3D Design and Modeling of Looping Ties for Medical Equipment | Prime</title>
+  <meta name="description" content="Explore Prime's expertise in 3D design and modeling of looping ties for medical equipment presentations. Our detailed and realistic models enhance your product visibility and effectively showcase functionality. Partner with us to elevate your medical presentations today!">
+  <meta name="keywords" content="3D design, modeling, looping ties, medical equipment, product presentations, visual representation, advanced modeling techniques, realistic visualizations, medical applications, brand credibility, design solutions, medical products">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -124,9 +124,25 @@
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Looping ties</h2>
+              <h2>3D Design and Modeling of Looping Ties for Medical Equipment</h2>
               <p>
-                3D design and modeling of looping ties for a presentation of a medical equipment.
+                Enhance your medical equipment presentations with Prime's expertise in the 3D design and modeling of looping ties. Our
+                innovative approach focuses on creating visually striking models that effectively showcase the functionality and
+                benefits of your medical products.
+              </p>
+              <p>
+                We understand the importance of precision in medical applications, which is why our 3D designs emphasize detailed
+                representation, ensuring that every aspect of the looping ties is accurately depicted. Our team utilizes advanced
+                modeling techniques to create realistic visualizations that can engage your audience and facilitate a better
+                understanding of the product's features.
+              </p>
+              <p>
+                With our looping ties design, you can confidently present your medical equipment, highlighting its practicality and
+                effectiveness. By partnering with Prime, you are not only investing in high-quality design but also in a solution that
+                enhances your brand's credibility in the medical field.
+              </p>
+              <p>
+                Let us help you transform your presentations with compelling 3D designs that leave a lasting impression.
               </p>
             </div>
           </div>
