--- a/portfolio-ticket-sales.html
+++ b/portfolio-ticket-sales.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Ticket sales - Prime</title>
-  <meta name="description" content="Ticket sales - portfolio details.">
-  <meta name="keywords" content="">
+  <title>Mobile Ticket Sales Application Design | Prime</title>
+  <meta name="description" content="Discover Prime's expertise in the design of mobile ticket sales applications. Our user-friendly solutions enhance the ticket purchasing experience with secure payment processing and real-time inventory updates. Partner with us to elevate your ticket sales business today!">
+  <meta name="keywords" content="mobile ticket sales application, ticket purchasing experience, user experience, mobile app design, event ticketing, intuitive interfaces, secure payment processing, real-time inventory updates, personalized notifications, mobile solutions, ticket sales market, web development">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -124,9 +124,23 @@
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Ticket sales</h2>
+              <h2>Mobile Ticket Sales Application Development</h2>
               <p>
-                Design of a mobile ticket sales application.
+                Streamline the ticket purchasing experience with Prime's expertise in the design of mobile ticket sales applications.
+                Our innovative solutions prioritize user experience, ensuring that customers can easily browse, select, and purchase
+                tickets for events from their mobile devices.
+              </p>
+              <p>
+                We focus on creating intuitive interfaces that enhance engagement and simplify the buying process, making it easier for
+                users to find their desired events and complete transactions seamlessly. Our applications also include features such as
+                secure payment processing, real-time inventory updates, and personalized notifications to keep users informed about
+                upcoming events.
+              </p>
+              <p>
+                By partnering with Prime, you gain access to a comprehensive mobile solution that not only meets the demands of today’s
+                consumers but also enhances your brand's visibility in the competitive ticket sales market. Let us help you create a
+                mobile application for ticket sales that elevates your business and provides an exceptional experience for your
+                customers.
               </p>
             </div>
           </div>
