--- a/portfolio-car-navigation-system.html
+++ b/portfolio-car-navigation-system.html
@@ -124,7 +124,7 @@
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Car navigation system</h2>
+              <h2>Car Navigation System Development</h2>
               <p>
                 At Prime, we specialize in the design of car navigation systems tailored for mobile applications. Our expertise in web
                 development services extends to creating intuitive and user-friendly navigation solutions that enhance the driving
