--- a/portfolio-cryptocurrency.html
+++ b/portfolio-cryptocurrency.html
@@ -196,7 +196,7 @@
 
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
           <h4>Contact Us</h4>
-          <p><strong>Email:</strong> <span>contact@primewebpage.com</span></p>
+          <p><strong>Email:</strong> <a href="mailto:contact@primewebpage.com">contact@primewebpage.com</a></p>
         </div>
 
       </div>
