--- a/service-product-management.html
+++ b/service-product-management.html
@@ -264,7 +264,7 @@
 
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
           <h5>Contact Us</h5>
-          <p><strong>Email:</strong> <span>contact@primewebpage.com</span></p>
+          <p><strong>Email:</strong> <a href="mailto:contact@primewebpage.com">contact@primewebpage.com</a></p>
         </div>
 
       </div>
