--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h3>Email Us</h3>
-                <p>contact@primewebpage.com</p>
+                <p><a href="mailto:contact@primewebpage.com">contact@primewebpage.com</a></p>
               </div>
             </div><!-- End Info Item -->
 
@@ -813,7 +813,7 @@
           <a href="/" class="logo d-flex align-items-center">
             <span class="sitename">Prime</span>
           </a>
-          <p>Web Solutions Tailored for Your Success.</p>
+          <p>Web Solutions Tailored for Your Success</p>
           <!--<div class="social-links d-flex mt-4">
             <a href=""><i class="bi bi-twitter-x"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
