--- a/portfolio-payment-cards.html
+++ b/portfolio-payment-cards.html
@@ -159,7 +159,7 @@
           <a href="/" class="logo d-flex align-items-center">
             <span class="sitename">Prime</span>
           </a>
-          <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+          <p>Web Solutions Tailored for Your Success</p>
           <!--<div class="social-links d-flex mt-4">
             <a href=""><i class="bi bi-twitter-x"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
