--- a/404.html
+++ b/404.html
@@ -99,14 +99,13 @@
                     <a href="/" class="logo d-flex align-items-center">
                         <span class="sitename">Prime</span>
                     </a>
-                    <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita
-                        valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
-                    <div class="social-links d-flex mt-4">
+                    <p>Web Solutions Tailored for Your Success</p>
+                    <!-- <div class="social-links d-flex mt-4">
                         <a href=""><i class="bi bi-twitter-x"></i></a>
                         <a href=""><i class="bi bi-facebook"></i></a>
                         <a href=""><i class="bi bi-instagram"></i></a>
                         <a href=""><i class="bi bi-linkedin"></i></a>
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="col-lg-2 col-6 footer-links">
@@ -123,11 +122,12 @@
                 <div class="col-lg-2 col-6 footer-links">
                     <h4>Our Services</h4>
                     <ul>
-                        <li><a href="web-design.html">Web Design</a></li>
-                        <li><a href="web-development.html">Web Development</a></li>
-                        <li><a href="product-management.html">Product Management</a></li>
-                        <li><a href="marketing.html">Marketing</a></li>
-                        <li><a href="graphic-design.html">Graphic Design</a></li>
+                        <li><a href="service-web-design.html">Web Design</a></li>
+                        <li><a href="service-web-development.html">Web Development</a></li>
+                        <li><a href="service-product-management.html">Product Management</a></li>
+                        <li><a href="service-graphic-design.html">Graphic Design</a></li>
+                        <li><a href="service-branding.html">Branding</a></li>
+                        <li><a href="service-marketing.html">Marketing</a></li>
                     </ul>
                 </div>
 
